fix: use vertical-align bottom for doc icon alignment

--- a/src/app/pages/channel/channel-view/channel-view.component.less
+++ b/src/app/pages/channel/channel-view/channel-view.component.less
@@ -140,9 +140,10 @@
     font-weight: 500;
     color: var(--devui-text, #252b3a);
     margin-bottom: 4px;
-    display: flex;
-    align-items: flex-end;
-    gap: 4px;
+
+    ::ng-deep d-icon {
+      vertical-align: bottom;
+    }
   }
 }
 
